# NCursesStuff

./: .gitignore  CMakeLists.txt  README.md
include/: ncurses_stuff.h
include/ncurses_stuff/: config.h.in
src/: CMakeLists.txt
src/helloworld/: CMakeLists.txt  main.c
src/keylogger/: CMakeLists.txt  main.c
src/paint/: CMakeLists.txt  _paint.h  main.c  paint.c  paint.h
